devops/k8s/prod/administration.api/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosadminapi
  labels:
    name: sosadminapi
