devops/k8s/prod/administration.api/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi
spec:
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: sosadminapi-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sosadminapi-api
  strategy: 
      type: Recreate
  template:
    metadata:
      annotations:
        logging: "true"
      labels:
        app: sosadminapi-api
    spec:
      topologySpreadConstraints: # try to spread out api instances over available nodes
      - labelSelector:
          matchLabels:
            app: sosadminapi-api # pods labeled app: sosadminapi-api
        maxSkew: 1
        topologyKey: kubernetes.io/hostname # 1 node = 1 topology
        whenUnsatisfiable: DoNotSchedule
      containers:
        - env:
          - name: ASPNETCORE_ENVIRONMENT
            value: prod
          - name: HangfireDbPassword
            valueFrom:
                secretKeyRef:
                  key: HangfireDbPassword
                  name: sosadminapi-secret
          - name: HangfireDbUserName
            valueFrom:
                secretKeyRef:
                  key: HangfireDbUserName
                  name: sosadminapi-secret
          - name: InstrumentationKey
            valueFrom:
                secretKeyRef:
                  key: InstrumentationKey
                  name: sosadminapi-secret
          - name: ProcessDbPassword
            valueFrom:
                secretKeyRef:
                  key: ProcessDbPassword
                  name: sosadminapi-secret
          - name: ProcessDbUserName
            valueFrom:
                secretKeyRef:
                  key: ProcessDbUserName
                  name: sosadminapi-secret
          - name: RedisPassword
            valueFrom:
                secretKeyRef:
                  key: RedisPassword
                  name: sosadminapi-secret
          - name: VerbatimDbPassword
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbPassword
                  name: sosadminapi-secret
          - name: VerbatimDbUserName
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbUserName
                  name: sosadminapi-secret
          - name: ApplicationInsights
            value: |
                {
                    "InstrumentationKey": "SECRET_PLACEHOLDER", 
                    "EnableRequestBodyLogging": false, 
                    "EnableSearchResponseCountLogging": false
                }
          - name: AllowedOrigins
            value: '*' 
          - name: AuthenticationConfiguration
            value: |
                {
                    "Authority": "https://useradmin-auth.slu.se", 
                    "ClientId": "sos.admin.api"
                }
          - name: SosApiConfiguration
            value: |
                {
                    "ObservationsApiAddresses": [ 
                        "http://172.23.1.9:83/", 
                        "http://172.23.1.10:83/" 
                    ], 
                    "ElasticSearchProxyAddresses": [ 
                        "http://172.23.1.41:83/", 
                        "http://172.23.1.42:83/" 
                    ], 
                    "AnalysisApiAddresses": [ 
                        "http://172.23.1.9:84/", 
                        "http://172.23.1.10:84/" 
                    ], 
                    "DataStewardshipApiAddresses": [ 
                        "http://172.23.1.9:85/", 
                        "http://172.23.1.10:85/" 
                    ]
                }
          - name: ProcessConfiguration
            value: |
                {
                    "TaxonAttributeServiceConfiguration": {
                        "BaseAddress": "https://taxonattributeservice.artdata.slu.se/api", 
                        "AcceptHeaderContentType": "application/json"
                    }, 
                    "TaxonServiceConfiguration": {
                        "BaseAddress": "https://taxonservice.artdata.slu.se/DarwinCore/DarwinCoreArchiveFile?version=custom", 
                        "AcceptHeaderContentType": "application/text", 
                        "TaxonApiAddress": "https://taxonapi.artdata.slu.se/darwincore/download?version=custom"
                    }
                }
          - name: RedisConfiguration
            value: |
                {
                    "EndPoint": "redis.redis-common.svc.cluster.local", 
                    "Port": 26379, 
                    "Password": "SECRET_PLACEHOLDER", 
                    "ServiceName": "mymaster"
                }
          - name: UserServiceConfiguration
            value: |
                {
                    "AcceptHeaderContentType": "application/json", 
                    "UserAdmin2ApiBaseAddress": "https://useradmin-api.slu.se", 
                    "ClientId": "SOS", 
                    "ClientSecret": "SECRET_PLACEHOLDER", 
                    "Scope": "useradmin.api SOS.Observations.Protected openid", 
                    "TokenUrl": "https://useradmin-auth.slu.se/connect/token", 
                    "TokenExpirationBufferInSeconds": 300, 
                    "IdentityProvider": {
                        "Authority": "https://useradmin-auth.slu.se", 
                        "Audience": "https://sos-search.artdata.slu.se", 
                        "RequireHttpsMetadata ": false
                    }
                }
          - name: ImportConfiguration
            value: |
                {
                    "ArtportalenConfiguration": {
                        "ConnectionStringBackup": "Server=artsql2-12-test.ad.slu.se;Database=SpeciesObservationSwe_Backup;Integrated Security=sspi;MultipleActiveResultSets=true;Pooling=true;Max Pool Size=1000;Min Pool Size=0;Persist Security Info=false;TrustServerCertificate=true;ApplicationIntent=ReadOnly;Connection Timeout=30;Connection Lifetime=0;", 
                        "ConnectionStringLive": "Server=sql-artsql2-9\\inst1;Database=SpeciesObservationSwe;Integrated Security=sspi;MultipleActiveResultSets=true;Pooling=true;Max Pool Size=1000;Min Pool Size=0;Persist Security Info=false;TrustServerCertificate=true;ApplicationIntent=ReadOnly;Connection Timeout=30;Connection Lifetime=0;", 
                        "ChunkSize": 50000, 
                        "MaxNumberOfSightingsHarvested": null, 
                        "AddTestSightings": false
                    }, 
                    "AreaHarvestConfiguration": {
                        "UseGeoRegionApiHarvest": true
                    }, 
                    "DwcaConfiguration": {
                        "ImportPath": "\\\\storage-ua.slu.se\\ARTSOS_PROD$\\SOS\\Temp"
                    }, 
                    "GeoRegionApiConfiguration": {
                        "ApiUrl": "https://georegionapi.artdata.slu.se/"
                    }
                }
          - name: VerbatimDbConfiguration
            value: |
                {
                    "UserName": "SECRET_PLACEHOLDER", 
                    "Password": "SECRET_PLACEHOLDER", 
                    "Hosts": [
                        {
                            "Name": "artsosagg2-2.ad.slu.se","Port": 27017
                        }
                    ], 
                    "DatabaseName": "sos-harvest", 
                    "UseTls": false, 
                    "AuthenticationDb": "admin", 
                    "ReadBatchSize": 10000, 
                    "WriteBatchSize": 10000
                }
          - name: ProcessDbConfiguration
            value: |
              [...]
          - name: HangfireDbConfiguration
            value: |
              [...]
          image: reg.app.slu.se/k1003-1/sosadminapi-api:$(Parameters.ImageTag)
          name: sosadminapi-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
          readinessProbe: # ready to accept traffic, failure = stops routing traffic to this pod but does not restart the pod!
            httpGet:
              path: /healthz
              port: 5005
              httpHeaders:
              - name: Host
                value: KubernetesReadinessProbe
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 30 # runs every 30 seconds
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: reg.app.slu.se-k1003-1-regcred
